solved button spacing in share buttons

--- a/src/css/_BRmain.scss
+++ b/src/css/_BRmain.scss
@@ -97,7 +97,7 @@
   .share-title { margin: 15px 15px 0; font-weight: bold; font-size: 18px; line-height: 22px; }
   .share-social { display: flex; flex-direction: column; gap: 10px; margin: 15px;}
   .share-social button {
-    width: 100%;
+    width: 25%;
     padding: 10px 15px;
     height: 40px;
     text-align: left;
